--- a/index.html
+++ b/index.html
@@ -169,39 +169,40 @@
           <tbody>
             <tr>
               <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-10h15</th>
-              <td class="table-primary"><b>Introduction to the BrainHack Marseille</b>
+              <td class="table-primary"><b>Introduction to BrainHack Marseille 2021</b>
                 <ul>
-<!--                   <li>09h00-09h15 - Introduction to the event</li>
-                  <li>09h15-09h45 - Leading and contributing to Brainhack Projects: an introductory guide - <b>Guillaume Auzias</b></li>
-                  <li>09h45-10h15 - Projects ignition</li> -->
-                  <li>09h00-10h15 - TODO</li>
+                  <li>09h00-09h15 - Introduction to the event</li>
+                  <li>09h15-10h15 - Projects pitches</li>
                 </ul>
               </td>
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">10h15-12h30</th>
-              <td class="table-success"><b>Hacking</b></td>
+              <td class="table-success"><b>Hacking / Introduction to Python by Julia Sprenger</b>
+                <p>In this hands-on session we will set up Python and go through the first steps of using this popular scientific programming language. The session consists of two parts:
+                  <ul>
+                    <li>setting up Anaconda/<a href="https://docs.conda.io/en/latest/miniconda.html">Miniconda</a> (including creating a virtual environment); duration 1h</li>
+                    <li>a type-along tutorial giving an overview of the basic concepts of Python (finding your way in Python, basic data types, variables, advanced types, loops, etc...); duration 1h15</li>
+                  </ul>
+                The session will take place in-person. Please bring a working laptop with wifi access to participate in the session. If you already have Anaconda or <a href="https://docs.conda.io/en/latest/miniconda.html">Miniconda</a> installed, feel free to join after the first part of the session.
+                </p>
+              </td>
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">12h30-14h00</th>
               <td class="table-danger"><b>Break</b></td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">14h00-15h00</th>
-              <td class="table-warning">
-                <b>Software demonstration</b>
-                <ul>
-<!--                   <li>14h00-14h15 Extracting task-related brain networks using Frites - <b>Etienne Combrisson</b></li>
-                  <li>14h15-14h30 Macapype: An open multi-software framework for non-human primate anatomical MRI processing - <b>David Meunier</b></li>
-                  <li>14h30-14h45 The Surface anaLysis And Modeling -SLAM- python toolbox: how to slam your brain! - <b>Guillaume Auzias</b></li>
-                  <li>14h45-15h00 eCOBIDAS: a webApp to that writes your methods section for you - <b>Rémi Gau</b></li> -->
-                  <li>14h00-15h00 - TODO</li>
-                </ul>
+              <th scope="row" class="align-middle text-nowrap">14h00-16h30</th>
+              <td class="table-success">
+                <b>Hacking</b>
               </td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">15h00-17h00</th>
-              <td class="table-success"><b>Hacking</b></td>
+              <th scope="row" class="align-middle text-nowrap">16h30-17h30</th>
+              <td class="table-warning"><b>Unconference - Remi Gau, Marie-Hélène Bourget, Martin Szinte & Sylvain Takerkart</b>
+                <p>BIDS and its recent extensions</p>
+              </td>
             </tr>
           </tbody>
         </table>
@@ -215,12 +216,12 @@
           <tbody>
             <tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-11h30</th>
+              <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-11h00</th>
               <td class="table-success"><b>Hacking</b></td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">11h30-12h30</th>
-              <td class="table-warning"><b>Unconference - TODO</b>
+              <th scope="row" class="align-middle text-nowrap">11h00-12h30</th>
+              <td class="table-warning"><b>OpenSource projects presentation togheter with Lyon community (Samuel Garcia - CRNL)</b>
 <!--                 <p>Recommendations for reproducible EEG and MEG research (from the OHBM Cobidas committee), <i><a href="https://www.nature.com/articles/s41593-020-00709-0">(Pernet et al. Nature Neuro 2020)</a></i></p> -->
               </td>
             </tr>
@@ -229,18 +230,14 @@
               <td class="table-danger"><b>Break</b></td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">14h00-16h00</th>
+              <th scope="row" class="align-middle text-nowrap">14h00-17h00</th>
               <td class="table-success"><b>Hacking</b></td>
             </tr>
             <tr>
-              <th scope="row" class="align-middle text-nowrap">16h00-17h00</th>
-              <td class="table-warning"><b>Unconference - TODO</b>
+              <th scope="row" class="align-middle text-nowrap">17h00-20h00</th>
+              <td class="table-danger"><b>BHM social event!</b>
                 <!-- <p>An open electrophysiological dataset recorded in non-human primates: acquisition, curation and exploitation using open source tools (odML, neo, Elephant), <i><a href="https://www.nature.com/articles/sdata201855">(Brochier et al. Sci Data 2018)</a></i></p> -->
               </td>
-            </tr>
-            <tr>
-              <th scope="row" class="align-middle text-nowrap">17h00-20h00</th>
-              <td class="table-success"><b>Social event!</b></td>
             </tr>
           </tbody>
         </table>
@@ -254,17 +251,27 @@
             <tbody>
               <tr>
               <tr>
-                <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-12h30</th>
+                <th scope="row" class="align-middle text-nowrap" style="width: 10%">09h00-11h30</th>
                 <td class="table-success"><b>Hacking</b></td>
+              </tr>
+              <tr>
+                <th scope="row" class="align-middle text-nowrap">11h30-12h30</th>
+                <td class="table-warning"><b>Unconference - Paola Mengotti (animated by Anna Montagnini and Remi Bos)</b>
+                <p>Women in Neuroscience</p>
+                </td>
               </tr>
               <tr>
                 <th scope="row" class="align-middle text-nowrap">12h30-14h00</th>
                 <td class="table-danger"><b>Break</b></td>
               </tr>
               <tr>
+                <th scope="row" class="align-middle text-nowrap" style="width: 10%">14h00-15h30</th>
+                <td class="table-success"><b>Hacking</b></td>
+              </tr>
+              <tr>
                 <th scope="row" class="align-middle text-nowrap">14h00-15h00</th>
-                <td class="table-warning"><b>Unconference - TODO</b>
-                  <!-- <p>Hands on experiments about reproducible analyses, <i><a href="https://academic.oup.com/gigascience/article/7/7/giy077/5046609">(Kim et al. GigaScience 2018)</a></i></p> -->
+                <td class="table-warning"><b>Unconference - Greg Operto</b>
+                  <p>Management and Quality Control of Large Neuroimaging Datasets: Developments From the Barcelonaβeta Brain Research Center, <i><a href="https://www.frontiersin.org/articles/10.3389/fnins.2021.633438/full">(Huguet et al. Frontiers in Neuroscience 2021)</a></i></p>
                 </td>
               </tr>
               <tr>
@@ -273,7 +280,7 @@
               </tr>
               <tr>
                 <th scope="row" class="align-middle text-nowrap">16h00-17h00</th>
-                <td class="table-primary"><b>Wrapping up about the projects with everybody.</b></td>
+                <td class="table-primary"><b>Wrapping up about the projects with everybody</b></td>
               </tr>
             </tbody>
           </table>
