--- a/index.html
+++ b/index.html
@@ -221,8 +221,7 @@
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">11h00-12h30</th>
-              <td class="table-warning"><b>OpenSource projects presentation togheter with Lyon community (Samuel Garcia - CRNL)</b>
-<!--                 <p>Recommendations for reproducible EEG and MEG research (from the OHBM Cobidas committee), <i><a href="https://www.nature.com/articles/s41593-020-00709-0">(Pernet et al. Nature Neuro 2020)</a></i></p> -->
+              <td class="table-warning"><b>OpenSource softwares demonstrations togheter with Lyon community (Samuel Garcia - CRNL)</b>
               </td>
             </tr>
             <tr>
@@ -487,7 +486,7 @@
 
             <div class="progress">
               <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 100%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
-                Knoledge/interest in eyetracking 100%
+                Knowledge/interest in eyetracking 100%
               </div>
             </div>
 
