--- a/index.html
+++ b/index.html
@@ -254,13 +254,13 @@
                 <td class="table-success"><b>Hacking</b></td>
               </tr>
               <tr>
-                <th scope="row" class="align-middle text-nowrap">11h30-12h30</th>
-                <td class="table-warning"><b>Unconference - Paola Mengotti (animated by Anna Montagnini and Remi Bos)</b>
-                <p>Women in Neuroscience</p>
+                <th scope="row" class="align-middle text-nowrap">11h0-12h00</th>
+                <td class="table-warning"><b>Unconference - Paola Mengotti </b>
+                <p>Diversity in Academia: The Women in Neuroscience Repository <a href="http://www.winrepo.org/">(WiNRepo)</a></p>
                 </td>
               </tr>
               <tr>
-                <th scope="row" class="align-middle text-nowrap">12h30-14h00</th>
+                <th scope="row" class="align-middle text-nowrap">12h00-14h00</th>
                 <td class="table-danger"><b>Break</b></td>
               </tr>
               <tr>
