--- a/index.html
+++ b/index.html
@@ -178,7 +178,13 @@
             </tr>
             <tr>
               <th scope="row" class="align-middle text-nowrap">10h15-12h30</th>
-              <td class="table-success"><b>Hacking / Introduction to Python by Julia Sprenger</b>
+              <td class="table-success">
+                Participants can chose to attend one of the two parallel sessions:
+                <br>
+                <b>Parallel session 1: Hacking</b>
+                  <br>
+                  <br>
+                  <b>Parallel session 2: Introduction to Python by Julia Sprenger</b>
                 <p>In this hands-on session we will set up Python and go through the first steps of using this popular scientific programming language. The session consists of two parts:
                   <ul>
                     <li>setting up Anaconda/<a href="https://docs.conda.io/en/latest/miniconda.html">Miniconda</a> (including creating a virtual environment); duration 1h</li>
@@ -632,7 +638,7 @@
                 <ul>
                   <li>Have as many electrophysiologists as possible convert their data to the proposed BIDS-ephys organization</li>
                   <li>Identify potential problems in the specifications, solve them</li>
-                  <li>Make progress on the tools required to facilitate this conversion (some of them being present <a href="https://github.com/INT-NIT/AnDO/">here</a></li>
+                  <li>Make progress on the tools required to facilitate this conversion (some of them being present <a href="https://github.com/INT-NIT/AnDO/">here</a>)</li>
                 </ul>
               </section>
 
@@ -643,7 +649,7 @@
         <div class="row justify-content-center">
           <div class="col" data-aos="fade-left" data-aos-delay="100">
             <h4>Required skills</h4>
-            This is a python project, a mix of coding and non-coding skills are required:
+            This is a project where coding is not required. If you know or have electrophysiology data recorded in animal models, come over and tell us about it! Some other project participants might do some coding, in Python. Appreciated skills:
           </div>
         </div>
 
