--- a/index.html
+++ b/index.html
@@ -309,8 +309,8 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <!-- <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <!-- <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="6"></li> -->
           </ol>
@@ -355,18 +355,18 @@
               </div>
             </div>
 
-            <!-- PROJECT 4 : macapype -->
-<!--             <div class="carousel-item">
+            <!-- PROJECT 4 : BrainSpread -->
+            <div class="carousel-item">
               <a class="scrollto active" href="#project4">
-                <img class="mx-auto d-block w-50" src="images/projects/project4.jpg" alt="Fourth slide">
+                <img class="mx-auto d-block w-50" src="images/projects/project4.png" alt="Fourth slide">
               </a>
               <div class="carousel-caption d-none d-md-block">
                 <a class="scrollto active" href="#project4">
-                  <h5>Macapype: segmentation to mesh pipeline</h5>
+                  <h5>BrainSpread</h5>
                 </a>
-                <p>by David Meunier, Bastien Cagna & Kep Kee Loh</p>
+                <p>by Alessandro Crimi, Luca Gherardini & Aleksandra Pestka</p>
               </div>
-            </div> -->
+            </div>
 
             <!-- PROJECT 5 : DAX -->
 <!--             <div class="carousel-item">
@@ -682,6 +682,86 @@
         </div>
         <hr style="height:20px">
     <!-- ============ End of Project3 =============== -->
+
+
+    <!-- ======= Project4 description bullet ======= -->
+      <a class="active" id="project4">
+        <div class="row justify-content-center align-items-center">
+      </a>
+
+          <div class="col-lg-4 col-md-5 col-sm-8 col-xs-1 col-md-2">
+            <img src="images/projects/project4.png" class="img-fluid" alt="">
+          </div>
+
+          <div class="col">
+
+            <div class="container my-4">
+
+              <!-- <a id="project1"> -->
+              <h3>BrainSpread: Misfolded proteins spreading</h3>
+              <!-- </a> -->
+              <p>
+                by <a style="color: black" href="https://github.com/alecrimi">Alessandro Crimi</a>, Luca Gherardini & <a href="https://github.com/AleksandraPestka">Aleksandra Pestka</a>
+              </p>
+
+              <hr>
+
+              <button class="btn btn-link btn-outline-primary font-weight-bold" data-toggle="collapse" href="#collapse_project4" role="button" aria-controls="collapse_project4"><h4>Description</h3></button>
+
+              <section class="collapse" id="collapse_project4">
+                Most of neurodegenerative diseases are believed to be related to the spreading of misfolded proteins. Controversies still arise whether which path those proteins follow, and whether brain structures are damaged during this spreading or they were predisposing it.
+                <br>
+                In the project, DWI data collected from Alzheimer's patients is used. The data flow includes: preprocessing, tractography generation, connectivity matrix calculation and connectivity graph visualization.
+                The next step is to simulate a spreading of misfolded proteins based on generated connectivity matrix and the location of seeds for Alzheimer's beta-amyloid in the brain.
+                <br>
+                <br>
+                The following points are going to be addressed in this project:
+                <ul>
+                  <li>Discuss and code the simulation methods (heat kernel based diffusion, epidemic simulation model etc.).</li>
+                  <li>Discuss the problem of a connectome structure change in time caused by neurodegeneration</li>
+                </ul>
+              </section>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col" data-aos="fade-left" data-aos-delay="100">
+            <h4>Required skills</h4>
+            This project requires a mix of coding and non-coding skills:
+          </div>
+        </div>
+
+        <div class="row justify-content-center mt-4">
+
+            <div class="progress">
+              <div class="progress-bar bg-info font-weight-bold" role="progressbar" style="width: 90%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Knowledge of neuroimaging, simulation modeling 90%
+              </div>
+            </div>
+
+            <div class="progress">
+              <div class="progress-bar bg-success font-weight-bold" role="progressbar" style="width: 70%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Python programming 70%
+              </div>
+            </div>
+
+<!--             <div class="progress">
+              <div class="progress-bar bg-danger font-weight-bold" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Python programming 60%
+              </div>
+            </div> -->
+
+<!--             <div class="progress">
+              <div class="progress-bar bg-warning font-weight-bold" role="progressbar" style="width: 20%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+                Skill 4 20%
+              </div>
+            </div> -->
+
+        </div>
+        <hr style="height:20px">
+    <!-- ============ End of Project4 =============== -->
 
     </section>
 
